# mapannotator

./: CMakeLists.txt  Doxyfile  README.md  config.hpp  default.yml  main.cpp  map_processing.cpp  map_processing.hpp  package.xml  ros2_node.cpp  utils.hpp  visualization.hpp
config/: rules.yaml
docs/: architecture.dot  architecture_comparison.dot  comparison_2303_vs_mapannotator.md  semantic_actions.dot
mapgraph/: typeregistry.cpp  typeregistry.h  zone_graph_dot.hpp  zone_graph_draw.hpp  zoneconfig.hpp  zonegraph.cpp  zonegraph.hpp
msg/: ZoneInfo.msg  ZoneMap.msg  ZonePassage.msg
pddl/: pddlgenerator.cpp  pddlgenerator.h
preparing/: mappreprocessing.cpp  mappreprocessing.hpp
scripts/: batch_segment.py
segmentation/: downsample_seeding.cpp  downsample_seeding.hpp  endpoints.h  labelmapping.cpp  labelmapping.hpp  segmentation.cpp  segmentation.hpp  segmenter.cpp  segmenter.hpp  zoneclassifier.cpp  zoneclassifier.h
