<?xml version="1.0"?>
<package format="3">
  <name>mapannotator</name>
  <version>0.0.0</version>
  <description>Map segmentation and PDDL generation node.</description>
  <maintainer email="user@example.com">User</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>opencv4</depend>
  <depend>yaml-cpp</depend>

  <exec_depend>opencv4</exec_depend>
  <exec_depend>yaml-cpp</exec_depend>

  <export/>
</package>
