<?xml version="1.0"?>
<package format="3">
  <name>mapannotator</name>
  <version>0.1.0</version>
  <description>Map segmentation and PDDL generation node.</description>

  <maintainer email="radtarasov@gmail.com">ARDev1161</maintainer>
  <license>MIT</license>

  <!-- build system -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- common deps -->
  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>

  <!-- system/third-party libs -->
  <build_depend>libopencv-dev</build_depend>
  <build_depend>yaml-cpp</build_depend>
  <exec_depend>libopencv-dev</exec_depend>
  <exec_depend>yaml-cpp</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
